--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ParentAcceuilActivity"></activity>
+        <activity
+            android:name=".ParentAcceuilActivity"
+            android:label="title_activity_parent_acceuil"></activity>
         <activity
             android:name=".EnseignantDashbordActivity"
             android:parentActivityName=".MainActivity">
