--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ParentAcceuilActivity"
-            android:label="title_activity_parent_acceuil"></activity>
+            android:label="@string/title_activity_parent_acceuil"></activity>
         <activity
             android:name=".EnseignantDashbordActivity"
             android:parentActivityName=".MainActivity">
