--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EvenementActivity"></activity>
+        <activity android:name=".ActivitesActivity" />
+        <activity android:name=".ObservationActivity" />
+        <activity android:name=".RappelActivity" />
         <activity
             android:name=".ParentAcceuilActivity"
-            android:label="@string/title_activity_parent_acceuil"></activity>
+            android:label="@string/title_activity_parent_acceuil" />
         <activity
             android:name=".EnseignantDashbordActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppThemes">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
