--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
-
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
