--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 02 17:14:26 GMT 2020
-sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
+#Mon Feb 03 01:02:01 GMT 2020
+sdk.dir=C\:\\Users\\ACER\\AppData\\Local\\Android\\Sdk
