--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ObservationsEnseignant.AjoutObservationsActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".ProfilParentActivity" />
         <activity android:name=".EvenementActivity" />
         <activity android:name=".ActivitesActivity" />
