--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 05 12:24:19 GMT 2020
-sdk.dir=C\:\\Users\\ACER\\AppData\\Local\\Android\\Sdk
+#Sun Feb 09 13:36:07 GMT 2020
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
