--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_djanggal_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -24,7 +24,7 @@
         <activity android:name=".Rappel.RappelParent" />
         <activity
             android:name=".ParentAcceuilActivity"
-            android:label="@string/title_activity_parent_acceuil" />
+            android:label="@string/app_name" />
         <activity
             android:name=".EnseignantDashbordActivity"
             android:parentActivityName=".MainActivity"
